sln: add sln to 1

--- a/hw08.tex
+++ b/hw08.tex
@@ -78,6 +78,31 @@
     вращения $\omega$. Пушка уничтожает все объекты, на которые она
     сейчас направлена. Помогите судну определить порядок уничтожения
     пиратов за $\O(n^2)$, чтобы не допустить непотребства.
+  \begin{solution}
+    Решим данную задачу динамикой. Будем в $M[l][r]$ хранить минимальное время, которое потребуется для того, чтобы покрыть лазером участок $[l, r]$, причем в конце данного действия лазер будет находиться в положении $l$ -- т.е. локально последним будет убит пират на позиции $l$. Поймем как считать время: даны две какие-то координаты (угла) $\{a_i, a_j\}$; дана скорость поворота лазера $\omega$, тогда время можно посчитать по формуле:
+    \begin{equation}
+      time = \dfrac{|a_i-a_j|}{\omega}.
+    \end{equation}
+  \end{solution}
+  Можно заполнить базовые случаи: нулевую колонку и последнюю строчку матрицы $M$. Нулевая колонка соответствует временам, которые потребуются для того, чтобы зачистить промежутки от $l_i$ до $r=0$, чтобы лазер оставался в $l_i$:
+  \begin{equation}
+    M[i][0] = \dfrac{|a[0]-a[i]|}{\omega}.
+  \end{equation}
+  Последня строчка соответствует временам, которые потребуются для того, чтобы зачистить промежутки от $l=n-1$ до $r_i$, чтобы лазер оставался в $l=n-1$:
+  \begin{equation}
+    M[n-1][j] = \dfrac{|a[n]-a[j]|}{\omega}.
+  \end{equation}
+  Запишем переходы. Чтобы увеличить правую границу на единицу, нужно взять решение для текущего промежутка и добавить время от начала текущего промежутка до границы плюс 1, так как в ``текущем'' решении мы находимся в левой границе:
+  \begin{equation}
+    M[l][r+1] = M[l][r] + \dfrac{|a[r+1] - a[l]|}{\omega}.
+  \end{equation}
+  Чтобы уменьшить левую границу, нужно взять решение для текущего промежутка добавить время от начала текущего промежутка до левой границы минус 1, так как в ``текущем'' решении мы находимся в левой границе и нам нужно пройти ``короткое'' расстояние до точки левее:
+  \begin{equation}
+    M[l-1][r] = M[l][r] + \dfrac{|a[l-1]-a[l]}{\omega}.
+  \end{equation}
+  Соответственно, мы представили задачи в виде двумерной матрицы, в которой заполнены левая колонка и нижняя строчка, а также мы записали переходы для увеличения координаты $r$ и уменьшения координаты $l$, то есть заполнение таблицы будет происходить из левого нижнего угла. Двумерная таблица заполняется за $\O(n^2)$, и ответ будет лежать в правой верхней ячейке $M[0][n-1]$.
+
+  Самое время вспомнить про то, что лазер в начальный момент направлен на азимут $a$, поэтому перед выполнением алгоритма отсортируем точки $a_i$ так, чтобы $a$ лежал в отрезке $[a_0, a_1]$. После этого запустим алгоритм и учтем, что начальное положение лазера в общем случае не совпадает с положением первого пирата. Еще нужно сказать, что в конце ответ нужно сравнить со временем самого позднего пирата, и если ответ больше, то получается, что мы не можем помешать пиратам совершить непотребство.
 
   % \item \exceptgroup{Крыштаповича}
   %   Дана строка из латинских букв длины $n$, нужно ее за $\O(n^3)$ запаковать в максимально короткую, используя правило
