sln: add sln to 3 (b)

--- a/hw08.tex
+++ b/hw08.tex
@@ -125,6 +125,18 @@
     \begin{enumerate}
       \item $\O(n^3)$.
       \item $\O(n)$.
+      \begin{solution}
+        Дан циклический массив. Нужно понять, что если мы берем текущий элемент, то он обнуляется и операция $zero$ на предыдущем и на следующем элементах не будет увеличивать $ans$, то произведение будет нулевым.
+
+        Для определения последовательности операций $zero(i)$ найдем индексы элементов, которые будут участвовать в искомой последовательности. Для $i$-го элемента можем сделать не более $n/2$ операций. Массив циклический и поэтому необходимо отдельно рассматреть случаи, когда мы одновременно рассматриваем первый элемент, и не рассматриваем последний, также когда рассматриваем последний, но не рассматриваем первый. Заведем для этого два массива $dp_1$ и $dp_2$, в которых будем постепенно накапливать максимально возможную сумму. Инициализируем сначала нулями, и переход будет:
+        \begin{equation}
+          \begin{cases}
+            dp_1[i] = \max(dp_1[i-1], dp_1[i-2] + a[i]) \\
+            dp_2[i] = \max(dp_2[i-1], dp_2[i-2])
+          \end{cases}
+        \end{equation}
+      \end{solution}
+      Из полученных массивов возьмем последние элементы и в качестве ответа возьмем максимум из них.
     \end{enumerate}
 
   \item[4.]
@@ -140,6 +152,11 @@
     очередной победы над подразделением Цезаря. Они хотят, чтобы забег начинался и заканчивался
     в деревнях, маршрут не проходил ни по какой деревне дважды и имел длину ровно $m$.
     Помогите им посчитать количество различных возможных маршрутов за $\O(nm)$.
+    \begin{solution}
+      Решим задачу динамикой. Возьмем какую-нибудь конкретную деревню, например первую, из которой будем стартовать забеги. Будем заполнять матрицу $M[i][j]$ - количество различных маршрутов от первой деревни до деревни $i$ длины $j$.
+
+      Базовый случай: $M[i][0]=1$ для всех $i$ -- единственный способ добраться до любой деревни с длиной маршрута 0 - это остаться в той же деревне.
+    \end{solution}
 
   \item[6.]
     Найдите во взвешенном графе гамильтонов цикл
