sln: add sln to 5

--- a/hw08.tex
+++ b/hw08.tex
@@ -156,6 +156,11 @@
       Решим задачу динамикой. Возьмем какую-нибудь конкретную деревню, например первую, из которой будем стартовать забеги. Будем заполнять матрицу $M[i][j]$ - количество различных маршрутов от первой деревни до деревни $i$ длины $j$.
 
       Базовый случай: $M[i][0]=1$ для всех $i$ -- единственный способ добраться до любой деревни с длиной маршрута 0 - это остаться в той же деревне.
+      Переход:
+      \begin{equation}
+        M[i][j] = \sum_{k=1}{n} M[k][j-\delta_{ik},]
+      \end{equation}
+      где $\delta_{ik}$ -- расстояние между деревнями $i, k$. Такие расстояние можно предпосчитать.
     \end{solution}
 
   \item[6.]
