sln: add sln to 4

--- a/hw08.tex
+++ b/hw08.tex
@@ -144,6 +144,12 @@
     от $0$ до $k_i$ раз. Найти максимальную суммарную цену,
     которую можно набрать таким образом, чтобы суммарный вес не превышал $W$.
     $\O(nW)$ времени, $\O(W)$ памяти.
+    \begin{solution}
+      Заведем три массива $prev, new, count$. $prev$ сначала инициализируем нулями, а в $new$ будем добавлять стоимости $v_i\cdot w_i \cdot k_i$. $new$ будем заполнять с учетом предыдущих стоимостей и вместимости:
+      \begin{equation}
+        new[i] = prev[i] - count[i] \cdot w_i + count[i] \cdot v_i.
+      \end{equation}
+    \end{solution}
 
   \item[5.] \onlygroup{Крыштаповича}
     В Галлии есть $n$ деревень, некоторые из которых соединены дорогами, длины которых --
