--- a/algo_template.tex
+++ b/algo_template.tex
@@ -91,6 +91,7 @@
   % \input{hw05.tex}
   % \input{hw06.tex}
   % \input{hw07.tex}
-  \input{hw08.tex}
+  % \input{hw08.tex}
+  \input{hw09.tex}
 
 \end{document}
