sln: add sln to 4 (a)

--- a/hw09.tex
+++ b/hw09.tex
@@ -114,7 +114,28 @@
 	равен $A$. $a_i, b_i, A \in \mathbb{Z}$
 	\begin{enumerate}
 		\item Можем ли завербовать всех людей? $\O(n \log n)$.
+		
+        \begin{solution}
+            Для начала разделим массив $b_i$ на два $b1_i, b2_i$. В $b1_i$ будут лежать все $b_i$, для которых $b_i \geq 0$, а в $b2_i$ -- $b_i$, для которых $b_i < 0$. Дальше отсортируем $b1_i$ по возрастанию $a_i$ и будем брать их всех по порядку. Это выгодно, потому что на каждом шаге мы забираем в банду человека с минимальными требованиями по авторитету, который в свою очередь прибавляет свой $b_i > 0$ к нашему авторитету $A$. Если в какой-то момент мы не сможем взять очередного человека, то это и будет максимальное количество людей, которых можно взять в банду. Больше не получится, потому что авторитет невозможно уже никак поднять, потому что человек, который может его поднять и в то же время с минимальными требованиями по авторитету недоступен.
+
+            Если мы смогли взять всех тех людей, которые вносят положительный авторитет, то, после примыкания всех людей, вносящих положительный $b_i$ у нас образовался некоторый $A' \geq A$. Теперь будем работать со вторым массивом $b2_i$, в котором каждый человек будет уменьшать наш текущий авторитет, потому что $b_i$ в $b2_i$ отрицательные. Отсортируем его по возрастанию модуля $|b_i|$ и по уменьшению $a_i$ (если есть два человека, понижающих авторитет на одну и ту же величину $|b_i|$, то выгодно сначала взять того, у кого требование по авторитету выше, потому что в противном случае, взяв человека с меньшими требованиями и понизив из-за него авторитет, мы потом можем не смочь взять человека с требованиями выше!). Будем пытаться брать всех по порядку, если их требования по авторитету меньше текущего авторитета. Так выгодно брать потому, что уменьшение $A'$ на каждом шаге минимально, поэтому мы сможем набрать как можно большее число людей. Если в какой-то момент мы дошли до конца массива и больше не можем никого взять (на предыдущих шагах не брали из-за несоответствия требованиям по репутации), то это и есть наш максимум. Больше взять не получится, потому что в таком случае мы бы еще сильнее занижали нашу репутацию, беря в банду людей, которые больше занижают авторитет и тем самым потенциально сокращают число людей, которых возможно взять.
+
+            Корректность. Рассмотрим этап с массивом положительных $b_i$: наш алгоритм не хуже оптимального, потому что он на каждом шаге берет наиболее доступного (с самыми низкими требованиями по авторитету) человека, который вносит положительный вклад в репутацию. Рассмотрим этап с массивом отрицательных $b_i$: наш алгоритм не хуже оптимального, потому что он на каждом шаге берет человека, который меньше всего может понизить нашу репутацию, и, как следствие, меньше всего сузить количество доступных для вербовки людей.
+
+            Асимптотика: разбиваем на разные массивы за $\O(n)$, сортируем массивы за $\O(n \log n)$, проходим по массивам и набираем банду за $\O(n)$, возвращаем ответ за $\O(1)$. Суммарно $\O(n \log n)$.
+        \end{solution}
+
 		\item Какое максимальное число людей мы можем завербовать? $\O(n \log n)$.
+		
+        \begin{solution}
+            Для начала разделим массив $b_i$ на два $b1_i, b2_i$. В $b1_i$ будут лежать все $b_i$, для которых $b_i \geq 0$, а в $b2_i$ -- $b_i$, для которых $b_i < 0$. Дальше отсортируем $b1_i$ по возрастанию $a_i$ и будем брать их всех по порядку. Это выгодно, потому что на каждом шаге мы забираем в банду человека с минимальными требованиями по авторитету, который в свою очередь прибавляет свой $b_i > 0$ к нашему авторитету $A$.
+
+            После примыкания всех людей, вносящих положительный $b_i$ у нас образовался некоторый $A' \geq A$. Теперь будем работать со вторым массивом $b2_i$, в котором каждый человек будет уменьшать наш текущий авторитет, потому что $b_i$ в $b2_i$ отрицательные.
+
+
+
+            Асимптотика: разбиваем на разные массивы за $\O(n)$, сортируем массивы за $\O(n \log n)$. Суммарно $\O(n \log n)$.
+        \end{solution}
 	\end{enumerate}
 
 
