sln: add sln to 2

--- a/hw09.tex
+++ b/hw09.tex
@@ -89,6 +89,15 @@
  	(занимает интервал $[b_i, e_i)$). Два занятия в одной аудитории
  	быть не могут. Распределите заявки по аудиториям так, чтобы
  	общее число аудиторий было минимально. Решить за $\O(n \log n)$.
+    \begin{solution}
+        Для начала отсортируем по возрастанию заявки по времени начала занятий $b_i$. Для отслеживания времени освобождения аудиторий от занятий (окончания занятий $e_i$) для каждой аудитории можно использовать минкучу. Дальше в цикле по всем заявкам: проверяем, имеется ли в нашей куче аудитория, которая освободится до начала текущего занятия $b_i$ (минимальный элемент не превосходит $b_i$)? Если такая аудитория имеется, то распределяем занятие в эту аудиторию и обновляем время окончания занятия в куче на $e_i$. Если такой аудитории нет, то в кучу нужно добавить новую аудиторию со временем окончания $e_i$ текущей заявки и, собственно, распределить в нее текущую заявку.
+        
+        В конце цикла имеем кучу, количество элементов которой будет равно минимальному необходимому количеству аудиторий для корректной обработки всех заявок.
+
+        Корректность: понятно, что алгоритм работает корректно благодаря тому, что для каждой заявки мы подбираем аудиторию, которая освободится раньше всех; алгоритм не загоняет два занятия в одну аудиторию, а также количество аудиторий поддерживается минимальным потому, что новая аудитория добавляется только тогда, когда мы физически не можем вставить текущую заявку в уже имеющиеся аудитории.
+
+        Асимптотика: сортировка заявок за $\O(n \log n)$, проходим по всем заявкам за $\O(n)$ и выполняем манипуляции с кучей за $\O(\log n)$. Суммарно $\O(n \log n)$.
+    \end{solution}
 
   \item
     $n$ aтлетов хотят выстроить из своих тел башню максимальной
