sln: add sln to 4 (b)

--- a/hw09.tex
+++ b/hw09.tex
@@ -137,13 +137,11 @@
 		\item Какое максимальное число людей мы можем завербовать? $\O(n \log n)$.
 		
         \begin{solution}
-            Для начала разделим массив $b_i$ на два $b1_i, b2_i$. В $b1_i$ будут лежать все $b_i$, для которых $b_i \geq 0$, а в $b2_i$ -- $b_i$, для которых $b_i < 0$. Дальше отсортируем $b1_i$ по возрастанию $a_i$ и будем брать их всех по порядку. Это выгодно, потому что на каждом шаге мы забираем в банду человека с минимальными требованиями по авторитету, который в свою очередь прибавляет свой $b_i > 0$ к нашему авторитету $A$.
+            Как и в предыдущей версии задачи разбиваем на $b1_i, b2_i$, сортируем $b1_i$ по возрастанию и пытаемся всех оттуда брать. После примыкания всех людей, вносящих положительный $b_i$ у нас образовался некоторый $A' \geq A$. Теперь будем работать со вторым массивом $b2_i$, в котором каждый человек будет уменьшать наш текущий авторитет, потому что $b_i$ в $b2_i$ отрицательные. Так как на данном этапе наш накопленный $A'$ может только уменьшаться, то по сути возникает задача о дедлайнах, в которой мы хотим уместить как можно больше людей в наш запас авторитета. Дедлайны будет представлять собой разности между текущим авторитетом и требуемым авторитетом, а также изменение после присоединения: $A' - a_i - b_i$. Как и в задаче о дедлайне сортируем эти величины по возрастанию и пытаемся уложить задачи $-b_i$ в свои дедлайны. Если уложить не получается, то пытаемся выкинуть самую жирную задачу, то есть в нашем случае - того, кто отнимает больше всего авторитета.
 
-            После примыкания всех людей, вносящих положительный $b_i$ у нас образовался некоторый $A' \geq A$. Теперь будем работать со вторым массивом $b2_i$, в котором каждый человек будет уменьшать наш текущий авторитет, потому что $b_i$ в $b2_i$ отрицательные.
+            Корректность: такие же рассуждения, как в предыдущем пункте + задача о дедлайнах.
 
-
-
-            Асимптотика: разбиваем на разные массивы за $\O(n)$, сортируем массивы за $\O(n \log n)$. Суммарно $\O(n \log n)$.
+            Асимптотика: разбиваем на разные массивы за $\O(n)$, сортируем массивы за $\O(n \log n)$, проходимся за $\O(n)$. Суммарно $\O(n \log n)$.
         \end{solution}
 	\end{enumerate}
 
