--- a/algo_template.tex
+++ b/algo_template.tex
@@ -92,6 +92,7 @@
   % \input{hw06.tex}
   % \input{hw07.tex}
   % \input{hw08.tex}
-  \input{hw09.tex}
+  % \input{hw09.tex}
+  \input{hw10.tex}
 
 \end{document}
