sln: add sln to 3

--- a/hw10.tex
+++ b/hw10.tex
@@ -85,6 +85,31 @@
     Пусть дан связный взвешенный неорграф, будем рассматривать его ребра в порядке невозрастания веса и
     удалять текущее ребро, если связность графа при этом не нарушается. Докажите, что этот алгоритм
     находит минимальный остов, или придумайте контрпример.
+
+    \begin{solution}
+      Докажем, что данный \href{https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B3%D0%BE%D1%80%D0%B8%D1%82%D0%BC_%D0%BE%D0%B1%D1%80%D0%B0%D1%82%D0%BD%D0%BE%D0%B3%D0%BE_%D1%83%D0%B4%D0%B0%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F}{алгоритм} находит минимальный остов. Для этого сначала докажем, что алгоритм находит остовное дерево, а потом докажем, что оно минимально.
+
+      После выполнения алгоритма получившийся подграф связен, потому что алгоритм удаляет ребра только в тех случаях, когда связность не нарушается. После выполнения алгоритма получившийся подграф не имеет циклов, потому что алгоритм, проходящий по циклу должен найти максимальное по весу ребро в нем и удалить его. Вывод: алгоритм на выходе выдает остовное дерево исходного графа.
+
+      Докажем по индукции, что верно следующее утверждение P: после выполнения, алгоритм оставляет некоторое подмножество ребер F, которое является минимальным остовом исходного графа.
+      
+      Поскольку взвешенный связный граф всегда имеет минимальное остовное дерево и поскольку F содержит все рёбра графа, то это минимальное остовное дерево должно быть подмножеством F.
+      
+      Предположим, что утверждение P верно для некоторого промежуточного множества рёбер F и пусть T будет минимальным остовным деревом, которое содержится в F. Покажем, что после удаления ребра e в алгоритме существует некоторое остовное дерево T', которое является подмножеством F.
+      \begin{itemize}
+        \item если следующее удалённое ребро e не принадлежит T, то T=T' является подмножеством F и утверждение P выполняется.
+        \item если ребро e принадлежит T: сначала заметим, что алгоритм удаляет только рёбра, которые не вызывают разрушения связности F, поэтому удаление ребра e не приводит к несвязности графа F, но удаление e приводит к несвязности дерева T (поскольку входит в T). Предположим, что e разбивает T на подграфы t1 и t2. Поскольку весь граф после удаления e остаётся связным, должен существовать путь между t1 и t2 (отличный от e), так что должен существовать цикл C в F (до удаления e). Теперь мы должны иметь другое ребро в этом цикле (пусть это будет f), которое не принадлежит T, но входит в F (поскольку если все рёбра цикла были бы в дереве T, оно не было бы деревом). Мы теперь утверждаем, что T' = T — e + f является минимальным остовным деревом, которое является подмножеством F.
+        \item Докажем, что T' является остовным деревом. Известно, что удаление ребра в дереве и добавление другого ребра не создаёт цикла и мы получаем другое дерево с теми же вершинами. Поскольку T было остовным деревом, T' должно быть также остовным деревом. Тогда добавление «f» не создаёт какого-либо цикла, поскольку удаляется «e» (дерево T содержит все вершины графа).
+        \item Теперь докажем, что T' является минимальным остовным деревом. У нас есть три случая для рёбер «e» и «f», определяемых функцией веса wt.
+        \begin{itemize}
+          \item Случай wt(f) < wt(e), что невозможно, поскольку из этого следует, что вес дерева T' строго меньше T. Поскольку T является минимальным остовным деревом, это просто невозможно.
+          \item Случай wt(f) > wt(e), что невозможно, поскольку когда мы проходим по рёбрам в убывающем порядке весов, мы должны видеть «f» первым. Поскольку мы имеем C, то удаление «f» не приводи к несвязности в F, так что алгоритм должен был бы удалить ребро из F ранее. То есть, «f» не принадлежит F, что невозможно (мы доказали принадлежность f на шаге 4).
+          \item Случай wt(f) = wt(e), так что T' является минимальным остовным деревом, так что утверждение P выполняется.
+        \end{itemize}
+      \end{itemize}
+      
+      Таким образом, утверждение P выполняется после завершения цикла. Было доказано, что в конце F становится остовным деревом, которое имеет минимальное остовное дерево в качестве подмножества, так что F само должно быть минимальным остовным деревом.
+    \end{solution}
     
   \item
      Есть $n$ городов. Можно соединить два города $i$ и $j$ дорогой, потратив $A \cdot len(i, j)$
