sln: add sln to 2

--- a/hw10.tex
+++ b/hw10.tex
@@ -81,6 +81,25 @@
     дерево (т.е. самое легкое остовное дерево из несовпадающих с данным в условии минимальным;
     деревья сравниваются как множества ребер) за время $\O(V^2 + E)$.
 
+    \begin{solution}
+      Пусть в графе $G$ минимальный остов $T$, а второй минимальный остов $T'$.
+      
+      $T$ и $T'$ отличаются в одном ребре. Поэтому нужно найти ребро $e$, которое не входит в $T$ и заменить им ребро из $T$, чтобы получить $T'$, которое является $T$, без ребра $e_{old}$, но с ребром $e_{new}$, и при этом разность $e_{new}-e_{old}$ минимальна.
+      
+      Алгоритм:
+      \begin{itemize}
+        \item для каждого ребра $e$, которого нет в минимальном остове, временно добавим его в MST, создав цикл.
+        \item найдем ребро $k$, не равное $e$, с максимальным весом в цикле.
+        \item временно удалим $k$, создав остовное дерево. Вычислим разницу в весе $weight(e)-weight(k)$ и запомним ее вместе с измененным ребром.
+        \item повторим шаг 1 для всех остальных ребер и вернем связующее дерево с наименьшей разницей в весе с минимальным остовом.
+      \end{itemize}
+      Корректность:
+      приведенный алгоритм работает корректно, потому что он сначала добавляет ребра, создавая цикл, а потом удаляет их, возвращая остовные деревья; алгоритм находит второй минимальный остов, потому что он ищет такой остов, который минимальное отличается от минимального остова по разности весов ребер.
+
+      Асимптотика:
+      Поиск максимальных ребер в самом простом варианте будет занимать $\O(V^2)$. По отсортированным ребрам за $\O(E)$ находится MST с помощью алгоритма Краскала. Суммарно: $\O(V^2 + E)$.
+    \end{solution}
+
   \item
     Пусть дан связный взвешенный неорграф, будем рассматривать его ребра в порядке невозрастания веса и
     удалять текущее ребро, если связность графа при этом не нарушается. Докажите, что этот алгоритм
