sln: add sln to 1

--- a/hw10.tex
+++ b/hw10.tex
@@ -75,6 +75,9 @@
   \item
     Докажите, что максимальный вес ребра на пути между парой вершин в минимальном остове графа $G$
     не зависит от выбора конкретного минимального остова $G$.
+    \begin{solution}
+      Предположим, что в графе $G$ есть 2 минимальных остова. \href{https://stackoverflow.com/questions/23251206/can-two-minimum-spanning-trees-for-the-same-graph-have-different-edge-weights}{У каждого MST совпадает набор весов $e$}. Докажем по индукции для трех вершин, где 2 MST будут состоять из одного ребра каждый (вес одинаковый). Очевидно, в таком случае требование выполняет. Предположим, что для $n$-вершинного графа есть 2 MST, для которых выполняется требование задачи. Если мы добавим еще одну вершину, то она обязательно должна быть включена в оба MST... Не знаю, еще пытался от противного, не получилось
+    \end{solution}
     
   \item 
     По неориентированному графу и его минимальному остовному дереву найдите второе остовное
