--- a/algo_template.tex
+++ b/algo_template.tex
@@ -93,6 +93,7 @@
   % \input{hw07.tex}
   % \input{hw08.tex}
   % \input{hw09.tex}
-  \input{hw10.tex}
+  % \input{hw10.tex}
+  \input{hw11.tex}
 
 \end{document}
