sln: add sln to 1

--- a/hw11.tex
+++ b/hw11.tex
@@ -74,6 +74,14 @@
     \end{itemize}
     $\O(\log^* V)$ на запрос в среднем, \texttt{online}.
 
+    \begin{solution}
+      Для решения данной задачи будем использовать СНМ с ранговой эвристикой и эвристикой сжатия путей. При построении СНМ в корне будем дополнительно хранить размер связной компоненты и самую легкую вершину в этой компоненте. Изначально у нас $V$ множеств с размером 1 и весом минимальной вершины -- своим весом. Потом по запросу мы от обеих вершин вызываем $find$ для поиска корней, сравниваем минимальные значения и при $union$ складываем размеры и записываем наименьшую вершину.
+
+      Корректность: алгоритм работает корректно, потому что СНМ с двумя эвристиками работает корректно. Сложение размеров корректно, потому что мы соединяем два множества в одно. Минимум поддерживается корректно, потому что мы на каждом $union$ сохраняем минимум из двух минимальных вершин.
+
+      Асимптотика: $find$ и $union$ работают за $\O(\log^* V)$ (из лекции)
+    \end{solution}
+
   \item
     Дан взвешенный неориентированный граф и $m$ запросов вида <<по паре вершин и числу $x$ узнать,
     существует ли между ними путь, проходящий только по ребрам не тяжелее $x$>>.
