sln: add sln to 2

--- a/hw11.tex
+++ b/hw11.tex
@@ -86,6 +86,14 @@
     Дан взвешенный неориентированный граф и $m$ запросов вида <<по паре вершин и числу $x$ узнать,
     существует ли между ними путь, проходящий только по ребрам не тяжелее $x$>>.
     $\O(E \log V + m \log m + m \log^* V)$ на все запросы,  \texttt{offline}.
+
+    \begin{solution}
+      Для начала построим MST данного графа. Дальше посортируем все запросы по возрастанию $x$ и будем строить СНМ. Изначально все вершины -- отдельные множества, будем проходить только по ребрам MST. Нужно добавлять только те ребра, которые не тяжелее текущего $x$ -- объединение через $union$. После добавления ребер можно сделать два запроса $find$ из обеих вершин и проверить, приводят ли они в один корень. Если приводят, то между ними существует путь, проходящий по ребрам не тяжелее $x$. И так пока не исчерпаются все запросы.
+
+      Корректность: для начала можно избавиться от большого количества неинтересных ребер, построив MST. По построению на каждом шаге мы получаем СНМ и для двух вершин можно проверить, принадлежат ли они одному множеству через $find$. По структуре СНМ можно гарантировать, что если две вершины принадлежат одному множеству, то между ними будет существовать путь.
+
+      Асимптотика: построение MST за $\O(E \log V)$, сортировка запросов за $\O(m \log m)$ и $m$ запросов $find$ и $unite$ за $\O(m \log^* V)$. Суммарно $\O(E \log V + m \log m + m \log^* V)$.
+    \end{solution}
 	
   % \item \exceptgroup{Крыштаповича}
 	% В компании работают бюрократы, один из которых является директором. У каждого бюрократа, кроме директора,
