sln: add sln to 2.8

--- a/algo_template.tex
+++ b/algo_template.tex
@@ -94,6 +94,7 @@
   % \input{hw08.tex}
   % \input{hw09.tex}
   % \input{hw10.tex}
-  \input{hw11.tex}
+  % \input{hw11.tex}
+  \input{hw12.tex}
 
 \end{document}
