sln: add sln to 2.9

--- a/hw12.tex
+++ b/hw12.tex
@@ -37,19 +37,23 @@
 
     \end{solution}
 
-    \item[9.]
+    \item[9.] % https://e-maxx.ru/algo/maximum_zero_submatrix
         Дана квадратная матрица из нулей и единиц. Найти наибольший по площади
         подпрямоугольник, состоящий только из нулей за $\O(n^2)$.
     
     \begin{solution}
-        Для решения данной задачи будем использовать СНМ с ранговой эвристикой и эвристикой сжатия путей. При построении СНМ в корне будем дополнительно хранить размер связной компоненты и самую легкую вершину в этой компоненте. Изначально у нас $V$ множеств с размером 1 и весом минимальной вершины -- своим весом. Потом по запросу мы от обеих вершин вызываем $find$ для поиска корней, сравниваем минимальные значения и при $union$ складываем размеры и записываем наименьшую вершину.
+        Пусть исходная матрица задается с помощью $a[i][j]$. Построим матрицу $b[i][j]$, которая изначально заполнена $-1$. $b[i][j]$ -- это индекс ближайшей сверху единицы для $a[i][j]$. $b[i][j]$ можно посчитать, двигаясь по матрице сверху вниз: пусть мы стоит в $i$-ой строке, и известно значение для предыдущей строки. Тогда достаточно скопировать эти значения в $b[i][j]$ для текущей строки, изменив только те элементы, в которых в матрице стоят единицы.
+
+        Искомая нулевая подматрица ограничена со всех сторон единичками или границами. Чтобы определить максимальную нулевую подматрицу будем перебирать номер $i$ нижней строки нулевой подматрицы, затем переберём, в каком столбце $j$ мы будем упирать вверх нулевую подматрицу. Пользуясь значением $b[i][j]$, мы сразу получаем номер верхней строки нулевой подматрицы. Но, чтобы подматрица была максимальной, нужно максимально расширить левую и правую границы. То есть нужно найти такой индекс $k_l$, для которого $b[i][k_l] > b[i][j]$, и при этом $k_l$ ближайший слева для индекса $j$. Тогда $k_l+1$ будет левой границей искомой подматрицы. Для правой границы нужно определить индекс $k_r$ -- ближайший справа от $j$ индекс для которого выполняется условие $b[i][k_r] > b[i][j]$.
         
-        Корректность: алгоритм работает корректно, потому что СНМ с двумя эвристиками работает корректно. Сложение размеров корректно, потому что мы соединяем два множества в одно. Минимум поддерживается корректно, потому что мы на каждом $union$ сохраняем минимум из двух минимальных вершин.
+        Значения $k_l$ и $k_r$ можно записывать в $b[i][j]$ для каждой клетки. Чтобы найти $k_l$ будем просматривать все столбцы $j$ слева направо, и заведём стек, как при решении предыдущей задачи. В стеке будут лежать только те столбцы, в которых значение матрицы $d$ строго больше $d[i][j]$. При переходе от столбца $j$ к следующему нужно обновить содержимое этого стека. Сначала в стек нужно положить столбец $j$, а затем, пока на вершине стека лежит неподходящий элемент, у которого значение $b \le b[i][j+1]$ — доставать этот элемент. $k_r$ ищется аналогично, только столбцы нужно будет просматривать справа налево. В конце пробегаемся по обновленной $b[i][j]$ и для каждой $i$ площадь подматрицы.
         
-        Асимптотика: $find$ и $union$ работают за $\O(\log^* V)$ (из лекции)
+        Асимптотика:
+        Вспомогательную матрицу $b[i][j]$ считаем за $\O(n^2)$. Для каждой строки за линию два раза считаем $k_l$ и $k_r$ (как в предыдущей задаче). Определяем ответ, пробегаясь по матрице за $\O(n^2)$. Суммарно $\O(n^2)$.
+
     \end{solution}
         
-\subsection{Разделяй и встаствуй HW3}
+\subsection{Разделяй и властвуй HW3}
 
 \end{enumerate}
     
