sln: add sln to 7.8

--- a/hw12.tex
+++ b/hw12.tex
@@ -52,8 +52,58 @@
         Вспомогательную матрицу $b[i][j]$ считаем за $\O(n^2)$. Для каждой строки за линию два раза считаем $k_l$ и $k_r$ (как в предыдущей задаче). Определяем ответ, пробегаясь по матрице за $\O(n^2)$. Суммарно $\O(n^2)$.
 
     \end{solution}
-        
-\subsection{Разделяй и властвуй HW3}
-
 \end{enumerate}
+
+\subsection{Демоническое программирование HW7}
+\begin{enumerate}
+    \item[8.] У профессора есть $k$ яиц и $n$ этажное здание. Он хочет узнать максимальное $x$: если яйцо бросить с $x$-го этажа, оно не разобьётся. Не разбившиеся яйца можно переиспользовать. Минимизировать число бросков в худшем случае.
+    \begin{enumerate}
+        \item $\O(n^2 k)$.
+        \begin{solution}
+            Введем матрицу $d$ размером $k$ на $n$. Элемент матрицы $d[i][j]$ -- это минимальное количество бросков яиц для бросков с $j$ этажного здания, если их всего $i$. При таком определении первый столбец матрицы нужно заполнить единицами, потому что, имея 1 этажное здание нам нужен всего один бросок. Первую строку матрицы заполним соответствующими значениями $j$, потому что у нас всего одно яйцо и мы будем проходить последовательно по всем этажам, чтобы найти искомый этаж. Остальные элементы таблицы будем заполнять следующим образом: для всех количеств яиц $i$ с каким-то фиксированным количеством этажей $m$ от 1 до $j$ будем находить максимум бросков яиц для худшего случая относительно этажа $j-m$, где оно не разбивается, и относительно этажа $m-1$, где оно разбивается. Этаж $m$, где яйцо разбивается, делит исходный промежуток $[1; j]$ на 2: $[1; m-1]$ и $[m; j]$. Так как нам необходимо совершить еще один бросок, чтобы проверить этаж, то нужно прибавить единицу:
+            \begin{equation}
+                d[i][j] = \min(\max(d[i][j-m], d[i-1][m-1])+1).
+            \end{equation}
+            Ответом будет элемент $d[k][n]$.
+
+            Асимптотика:
+            Чтобы найти этаж $m$ нужно $\O(n)$, так как в худшем случае нужно будет пройти все этажи. Для каждого элемента матрицы $d$ нужно находить этот этаж $m$, поэтому суммарная асимптотика будет $\O(kn^2)$.
+        \end{solution}
+        \item $\O(n k \log{n})$.
+        \begin{solution}
+            Изменим алгоритм из предыдущего пункта. Введем функцию
+            \begin{equation}
+                f_1(t) = d[i-1][m-1],
+            \end{equation}
+            где $t$ -- количество бросков. С увеличением $m$ эта функция не убывает. Введем другую функцию
+            \begin{equation}
+                f_2(t) = d[i][j-m],
+            \end{equation}
+            которая не возрастает с увеличением $m$. Теперь элементом $d[i][j]$ будет максимум из этих функций. В таком случае можно воспользоваться бинарным поиском для нахождения $m$: найдем значения функций $f_1, f_2$ относительно текущего $m$, которое мы будем принимать за середину промежутка. Это будет этаж $m$ с минимальным количеством бросков для худшего случая. Если $f_1 < f_2$, то будем двигаться в правую часть промежутка, а в противном случае -- в левую. Далее опять делим отрезов и смотрим на значения функций $f_1, f_2$. В итоге получили промежуток длины 2. Посмотрим на количества бросков для этих этажей, вычислим минимум от максимумов этих двух этажей и внесем результат в таблицу.
+
+            Асимптотика:
+            в таком решении $m$ ищется бинарным поиском, поэтому суммарная асимптотика будет $\O(kn\log n)$.
+        \end{solution}
+        \item $\O(n k)$.
+        \begin{solution}
+            Изменим смысл столбцов -- пусть теперь они означают количество бросков, поэтому $d[i][j]$ -- правильное количество этажей для $i$ яиц и $j$ бросков в худшем случае. Первые столбец и строчку заполним так же, как в первом пункте, но переход уже будет:
+            \begin{equation}
+                d[i][j] = d[i-1][j-1]+d[i][j-1]+1
+            \end{equation}
+            Если при броске яйцо разбивается, то снизу есть $d[i-1][j-1]$ этажей. Если не разбивается, то сверху есть $d[i][j-1]$ этажей. Плюс еще добавляется проверка текущего этажа. Ответом будет минимальное $j^*$, для которого $d[i][j^*]<n$.
+
+            Асимптотика:
+            при таком подходе нет проверки, которую мы делали в первом пункте за линию, а во втором за логарифм, поэтому суммарно будет $\O(nk)$.
+        \end{solution}
+        \item $\O(n \log{n})$.
+        \begin{solution}
+            Используем решение из предыдущего пункта, но будем использовать бинарный поиск по этажам, а не считать все элементы матрицы.
+
+            Асимптотика:
+            благодаря бинарному поиску суммарная асимптотика будет $\O(n\log n)$.
+        \end{solution}
+    \end{enumerate}
+\end{enumerate}
+
+
     
