sln: add sln to 3.8

--- a/hw12.tex
+++ b/hw12.tex
@@ -54,6 +54,33 @@
     \end{solution}
 \end{enumerate}
 
+\subsection{Разделяй и встаствуй HW3}
+\begin{enumerate}
+    \item[8.] Дан массив из $2n$ различных чисел. Найдите минимальное и максимальное за $3n - 2$ сравнения и докажите, что это точная нижняя оценка, то есть меньшего количества сравнений может не хватить.
+    \begin{solution}
+        Данную задачу можно решить, если удобно разбить исходный массив длины $2n$ на два массива одинаковой длины так, чтобы было достоверно известно, что в одном из них лежит минимальное число, а в другом максимальное. Сделать это можно следующим образом: разобьем исходный массив на пары и проведем сравнения элементов в рамках каждой пары. Если элемент оказывается меньше своего соседа, то записываем его в первый массив, а соседа во второй, в противном случае -- наоборот. В итоге за $n$ сравнений мы разбили исходный массив на два: в первом из них лежит минимальный элемент (потому что в первый массив мы всегда записывали элементы, которые были меньше своих соседей по парам), а во втором -- максимальный. Осталость теперь в первом массиве найти минимум за $n-1$ сравнение, и во втором -- максимум за $n-1$ сравнение. Просто проходим по массиву и сравниваем очередной элемент с текущим минимумов/максимумом.
+
+        Алгоритм, поиска минимума или максимума -- по сути процесс сокращения множества кандидатов на минимум и максимум. Если нам дано множество из $2n$ элементов, то кандидатов на максимум тоже $2n$, ровно как и кандидатов на минимум, потому что никакой информации про исходное множество мы не имеем. При сравнениях мы получаем информацию, которая сокращает эти множества. А именно, если мы сравниваем два елемента $a$ и $b$ (не ограничивая общности, пусть $a<b$), которые не сравнивались до этого, то множество минимумов сократится на 1 (потому что $b$ уже точно не может быть минимумом, раз $b$ не меньше $a$), также как и множество максимумов сократится на 1 (потому что $a$ уже точно не может быть максимумов, раз $a$ меньше $b$). Если мы сравниваем какое-то новое число (про него ничего не знаем) с числом, про которое мы уже что-то знаем, то в таком случае сократится только одно из множеств на 1, потому число, про которое что-то знаем, уже удалено из другого множества.
+
+        Допустим, что какой-то алгоритм находит минимум и максимум в массиве из $2n$ элементов за число сравнений, меньшее, чем $3n-2$. Для этого он сделает $x$ "уменьшений множеств на 2" и $y$ "уменьшений множеств на 1. Соответственно, алгоритм удалит $2x+y$ элементов из исходных множеств, чтобы остались всего 2 -- минимум и максимум. Составим систему:
+        \begin{equation}
+            \begin{cases}
+                x+y<3n-2 \\
+                4n-(2x+y)=2
+            \end{cases}
+        \end{equation} $\Rightarrow$
+        \begin{equation}
+            \begin{cases}
+                y=4n-2x-2 \\
+                x>n \quad !?!
+            \end{cases}
+        \end{equation}
+        Получили, что количество "уменьшений на 2" (а оно случается лишь тогда, когда элементы мы видим впервые) большем, чем половина исходного массива, то есть как будто мы разбили массив на пары и таких пар оказалось больше половины массива. Противоречие, поэтому такого алгоритма быть не может.
+    \end{solution}
+        
+    \item[9.] Найдите второй максимум в массиве за $n + \lceil \log_2 n \rceil- 2$ сравнение и докажите, что это точная нижняя оценка, то есть меньшего количества сравнений может не хватить.
+\end{enumerate}
+
 \subsection{Демоническое программирование HW7}
 \begin{enumerate}
     \item[8.] У профессора есть $k$ яиц и $n$ этажное здание. Он хочет узнать максимальное $x$: если яйцо бросить с $x$-го этажа, оно не разобьётся. Не разбившиеся яйца можно переиспользовать. Минимизировать число бросков в худшем случае.
